scripts/nullaway/original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8.txt
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Rhythmic_Block.java:98: error: [NullAway] initializer method does not guarantee @NonNull field rhythmicValues (line 93) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Rhythmic_Block(int beatVal){
	        ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Tonality.java:28: error: [NullAway] initializer method does not guarantee @NonNull field relatedKeys (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Tonality(Key k, int i) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Key.java:69: error: [NullAway] initializer method does not guarantee @NonNull fields relativeMinor (line 42), chord (line 49) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Key(int oct0, int oct1, int oct2, 
	        ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Chord.java:36: error: [NullAway] initializer method does not guarantee @NonNull field scales (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Chord(){}
	        ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:94: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 85), key (line 86), octaves (line 87) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Scale(int root, int interval2, int interval3, 
	        ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:104: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 85), key (line 86), octaves (line 87) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Scale(int root, int interval2, int interval3, 
	        ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:115: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 85), key (line 86), octaves (line 87) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Scale(int root, int interval2, int interval3, 
	        ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/DesiredLoudness.java:26: error: [NullAway] initializer method does not guarantee @NonNull fields allDynamics (line 19), theShape (line 20), howCloseAreTheDynamics (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DesiredLoudness(Dynamic d) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/DesiredLoudness.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields allDynamics (line 19), howCloseAreTheDynamics (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DesiredLoudness(Dynamic d, DynamicShape ds) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/TargetChromosome.java:25: error: [NullAway] initializer method does not guarantee @NonNull field targetFeel (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TargetChromosome(Tonality t, DesiredLoudness dl){
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:65: error: [NullAway] initializer method does not guarantee @NonNull fields scaleIntervals (line 35), phrase (line 37), allKeys (line 47), allScales (line 48), allDynamics (line 49), allDynamicShapes (line 50), allRhythms (line 51), keyGene (line 54), scaleGene (line 55), dynamicGene (line 56), dshapeGene (line 57), rhythmGenes (line 58) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Chromosome(){
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:72: error: [NullAway] initializer method does not guarantee @NonNull fields scaleIntervals (line 35), phrase (line 37), allKeys (line 47), allScales (line 48), allDynamics (line 49), allDynamicShapes (line 50), allRhythms (line 51), keyGene (line 54), scaleGene (line 55), dynamicGene (line 56), dshapeGene (line 57) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Chromosome(int _min , int _max) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:87: error: [NullAway] initializer method does not guarantee @NonNull fields scaleIntervals (line 35), phrase (line 37), allKeys (line 47), allScales (line 48), allDynamics (line 49), allDynamicShapes (line 50), allRhythms (line 51), keyGene (line 54), dynamicGene (line 56), dshapeGene (line 57) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Chromosome(int _min , int _max, Key k, Scale s) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:99: error: [NullAway] read of @NonNull field scaleGene before initialization
		this.scaleGene.initialise  (this.keyGene);
		    ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:99: error: [NullAway] read of @NonNull field keyGene before initialization
		this.scaleGene.initialise  (this.keyGene);
		                                ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:39: error: [NullAway] initializer method does not guarantee @NonNull field musicalPhrase (line 33) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Phrase(int min, int max, Scale s, Dynamic d, DynamicShape ds, ArrayList <Rhythmic_Block> arr) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Note.java:22: error: [NullAway] initializer method does not guarantee @NonNull fields noteVal (line 16), noteData (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Note(){}
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Note.java:23: error: [NullAway] initializer method does not guarantee @NonNull field noteData (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Note(int t, int v, String s){
	       ^
    (see http://t.uber.com/nullaway )
../original/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/networking/OSCClient.java:51: error: [NullAway] initializer method does not guarantee @NonNull fields oscP5 (line 26), myRemoteLocation (line 27), noteValues (line 32), velocityValues (line 33), millisValues (line 34), theFuzzySystem (line 43), theGeneticAlgorithm (line 44), response (line 46) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public OSCClient() {
	       ^
    (see http://t.uber.com/nullaway )
19 errors
